extract entities. Doesn't work yet

--- a/index.html
+++ b/index.html
@@ -84,6 +84,17 @@
 
     <pre><b>Result:</b> <div id="showStoreResult"></div></pre>
 
+    <h2>5. Put data to validate and extract entities</h2>
+    <form id="extractEntities">
+        <div class="form-group">
+            <label for="showStoreToken">Data to validate:</label>
+            <textarea id="data" class="form-control"></textarea>
+        </div>
+        <input type="submit" value="Submit">
+    </form>
+
+    <pre><b>Result:</b> <div id="extractEntitiesResult"></div></pre>
+
 </div>
 
 </body>
