--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <form id="signin">
         <div class="form-group">
             <label for="username">Email address:</label>
-            <input type="email" class="form-control" id="username" value="s3@blockchain.open.ac.uk">
+            <input type="email" class="form-control" id="username" value="s<XX>@blockchain.open.ac.uk">
         </div>
         <div class="form-group">
             <label for="password">Password:</label>
