link to blockchain monitor

--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
 
 <h1>Linked Open Data Blockchain</h1>
 
+
+
+<div class="section">
+    <h2>Blockchain Monitor</h2>
+    <a href="http://blockchain7.kmi.open.ac.uk/parity/blockchainmonitorsocket/index.html"><img src="images/monitor.png" title="ISWS 2018" height="90"></a>
+</div>
+
+
 <div class="section">
 
     <h2>1. Authenticate</h2>
