--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <div class="section">
     <h2>Blockchain Monitor</h2>
     <a href="http://blockchain7.kmi.open.ac.uk/parity/blockchainmonitorsocket/index.html"><img src="images/monitor.png" title="ISWS 2018" height="90"></a>
+    <iframe src="http://blockchain7.kmi.open.ac.uk/parity/blockchainmonitorsocket/index.html"></iframe>
 </div>
 
 
