fixed iframe with monitor

--- a/index.html
+++ b/index.html
@@ -26,20 +26,16 @@
                                                                       height="90"></a></span>
     <span class="rlogo"><a href="http://isws2018.semanticwebschool.org/"><img src="images/isws-logo.png"
                                                                               title="ISWS 2018" width="320" height="90"></a></span>
+
+    <a href="http://blockchain7.kmi.open.ac.uk/parity/blockchainmonitorsocket/index.html"><img src="images/monitor.png"
+                                                                                               title="ISWS 2018"
+                                                                                               height="90"></a>
+    <iframe src=" https://blockchain7.kmi.open.ac.uk/parity/blockchainmonitorsockethttps/mini.html" style="margin-top:15px;border:none;height:170px;background-color:white;width:100%;clear:both;float:left;"></iframe>
 </div>
 
 <h1>Linked Open Data Blockchain</h1>
 
-
-<div class="section">
-    <h2>Blockchain Monitor</h2>
-    <a href="http://blockchain7.kmi.open.ac.uk/parity/blockchainmonitorsocket/index.html"><img src="images/monitor.png"
-                                                                                           title="ISWS 2018"
-                                                                                           height="90"></a>
-    <iframe src=" https://blockchain7.kmi.open.ac.uk/parity/blockchainmonitorsockethttps/mini.html" style="margin-top:15px;border:none;height:170px;background-color:white;width:100%;clear:both;float:left;"></iframe>
-</div>
-
-
+<div class="sections">
 <div class="section">
     <h2>1. Authenticate</h2>
     <form id="signin">
@@ -121,7 +117,7 @@
 </div>
 <div class="section">
 
-    <h2>6. Put data to validate and extract entities</h2>
+    <h2>6. Put data to extract entities</h2>
     <p>F.e: "John Doe studied at Open University"</p>
     <form id="extractEntities">
         <div class="form-group">
@@ -147,7 +143,7 @@
 
     <pre><b>Result:</b> <div id="storeDataResult"></div></pre>
 </div>
-
+</div>
 
 </body>
 </html>
