fixed issues with subject and address

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <form id="extractEntities">
         <div class="form-group">
             <label for="showStoreToken">Data to validate:</label>
-            <textarea id="data" class="form-control"></textarea>
+            <textarea id="data" class="form-control">Barack Obama studied at Open University</textarea>
         </div>
         <input type="submit" value="Submit">
     </form>
