--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <span class="llogo"><a href="https://instituteofcoding.org/"><img src="images/ioc-logo.png"
                                                                       title="Institute of Coding" width="340"
                                                                       height="90"></a></span>
-    <span class="rlogo"><a href="http://isws2018.semanticwebschool.org/"><img src="images/isws-logo.png"
+    <span class="rlogo"><a href="https://isws2018.semanticwebschool.org/"><img src="images/isws-logo.png"
                                                                               title="ISWS 2018" width="320" height="90"></a></span>
 
-    <a href="http://blockchain7.kmi.open.ac.uk/parity/blockchainmonitorsocket/index.html"><img src="images/monitor.png"
+    <a href="https://blockchain7.kmi.open.ac.uk/parity/blockchainmonitorsocket/index.html"><img src="images/monitor.png"
                                                                                                title="ISWS 2018"
                                                                                                height="90"></a>
-    <iframe src="http://blockchain7.kmi.open.ac.uk/parity/blockchainmonitorsocket/index.html" style="margin-top:15px;border:none;height:170px;background-color:white;width:100%;clear:both;float:left;"></iframe>
+    <iframe src="https://blockchain7.kmi.open.ac.uk/parity/blockchainmonitorsocket/index.html" style="margin-top:15px;border:none;height:170px;background-color:white;width:100%;clear:both;float:left;"></iframe>
 </div>
 
 <h1>Linked Open Data Blockchain</h1>
