--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <a href="https://blockchain7.kmi.open.ac.uk/parity/blockchainmonitorsocket/index.html"><img src="images/monitor.png"
                                                                                                title="ISWS 2018"
                                                                                                height="90"></a>
-    <iframe src="http://blockchain7.kmi.open.ac.uk/parity/blockchainmonitorsocket/index.html" style="margin-top:15px;border:none;height:170px;background-color:white;width:100%;clear:both;float:left;"></iframe>
+    <iframe src="https://blockchain7.kmi.open.ac.uk/parity/blockchainmonitorsockethttps/mini.html" style="margin-top:15px;border:none;height:170px;background-color:white;width:100%;clear:both;float:left;"></iframe>
 </div>
 
 <h1>Linked Open Data Blockchain</h1>
